# wasm-verify

./: CHANGELOG.md  LICENSE  README.md  stack.yaml  wasm-verify.cabal
.github/workflows/: build.yml
app/: Main.hs
examples/: abs.verifiwasm  abs.wasm  abs.wat  abs_alternative.verifiwasm  cfg_example.verifiwasm  cfg_example.wasm  cfg_example.wat  dup.verifiwasm  dup.wasm  dup.wat  dup_multivalue.verifiwasm  dup_multivalue.wasm  dup_multivalue.wat  example_br_table.verifiwasm  example_br_table.wasm  example_br_table.wat  fib.verifiwasm  fib.wasm  fib.wat  fib_s-exp.wasm  multivalue.verifiwasm  multivalue.wasm  multivalue.wat  no_return_fib.verifiwasm  no_return_fib.wasm  no_return_fib.wat  select.verifiwasm  select.wasm  select.wat
src/: WasmVerify.hs
src/Helpers/: ANSI.hs  Numeric.hs
src/VerifiWASM/: ASTValidator.hs  LangTypes.hs  Parser.hs  ToSMT.hs  Validation.hs  VerifiWASM.hs
src/WasmVerify/: CFG.hs  CFGs.hs  Execution.hs  ModuleLoader.hs  Monad.hs  Paths.hs  ToSMT.hs
src/WasmVerify/CFG/: Fusion.hs  Types.hs
test/WasmVerify/: ModuleLoaderSpec.hs  WasmVerifySpec.hs
verifiwasm/VerifiWASM/: ASTValidator.hs  LangTypes.hs  Parser.hs  VerifiWASM.hs
