cabal-version:      3.6
name:               wasm-verify
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/DavidMazarro/wasm-verify#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             David Mazarro
maintainer:         davidmazarro98@gmail.com
copyright:          2022 Author name here
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common common-extensions
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TypeApplications

library
  import:           common-extensions
  hs-source-dirs:   src verifiwasm
  exposed-modules:
    Helpers.ANSI
    VerifiWASM.ASTValidator
    VerifiWASM.LangTypes
    VerifiWASM.Parser
    VerifiWASM.VerifiWASM
    WasmVerify.ModuleLoader

  build-depends:
    , base
    , bytestring
    , megaparsec
    , mtl
    , parser-combinators
    , path
    , pretty-simple
    , safe-exceptions
    , text
    , transformers
    , wasm                >=1.1.1

  ghc-options:      -Wall -Werror -haddock
  default-language: Haskell2010

executable wasm-verify
  import:           common-extensions
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  other-modules:    Paths_wasm_verify
  build-depends:
    , base                  >=4.7 && <5
    , optparse-applicative
    , path
    , pretty-simple
    , process
    , text
    , wasm-verify

  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

test-suite test
  import:             common-extensions
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    WasmVerify.ModuleLoaderSpec

  build-depends:
    , base
    , bytestring
    , directory
    , hspec
    , megaparsec
    , path
    , wasm
    , wasm-verify

  build-tool-depends: hspec-discover:hspec-discover
  default-language:   Haskell2010
