cabal-version:      3.6
name:               wasm-verify
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/DavidMazarro/wasm-verify
license:            MPL-2.0
license-file:       LICENSE
author:             David Mazarro
maintainer:         davidmazarro98@gmail.com
copyright:          2022 David Mazarro
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common common-extensions
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    GeneralizedNewtypeDeriving
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    TypeApplications

  ghc-options:
    -Wall -Werror -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wunused-packages -Wmissing-home-modules
    -Wpartial-fields -Wredundant-constraints

library
  import:           common-extensions
  hs-source-dirs:   src
  exposed-modules:
    Helpers.ANSI
    Helpers.Numeric
    VerifiWASM.LangTypes
    VerifiWASM.Parser
    VerifiWASM.Validation
    VerifiWASM.VerifiWASM
    WasmVerify
    WasmVerify.CFG
    WasmVerify.CFG.Fusion
    WasmVerify.CFG.Types
    WasmVerify.Execution
    WasmVerify.Monad
    WasmVerify.Paths
    WasmVerify.ToSMT

  build-depends:
    , base
    , bimap
    , bytestring
    , containers
    , megaparsec
    , mtl
    , parser-combinators
    , path
    , process
    , safe
    , safe-exceptions
    , text
    , transformers
    , wasm                >=1.1.1 && <1.2

  default-language: Haskell2010

executable wasm-verify
  import:           common-extensions
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  other-modules:    Paths_wasm_verify
  build-depends:
    , base                  >=4.7   && <5
    , directory
    , optparse-applicative
    , path
    , pretty-simple
    , wasm                  ==1.1.1
    , wasm-verify

test-suite test
  import:             common-extensions
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      WasmVerify.WasmVerifySpec
  build-depends:
    , base
    , bytestring
    , directory
    , hspec
    , megaparsec
    , path
    , silently
    , wasm
    , wasm-verify

  build-tool-depends: hspec-discover:hspec-discover
  default-language:   Haskell2010
